--- a/mav.html
+++ b/mav.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -228,4 +228,5 @@
 </script>
 
 </body>
-</html>
+  </html>
+  
